--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
               ]
             },
             "scripts": [
-              "node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"
+              "node_modules/@fortawesome/fontawesome-free/js/all.js"
             ]
           },
           "configurations": {
@@ -123,7 +123,7 @@
               ]
             },
             "scripts": [
-              "node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"
+              "node_modules/@fortawesome/fontawesome-free/js/all.js"
             ]
           }
         }
