--- a/angular.json
+++ b/angular.json
@@ -29,24 +29,15 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "./src",
-                "./src/styles",
-                "./src/theme"
-              ]
+              "includePaths": ["./src", "./src/styles", "./src/theme"]
             },
-            "scripts": [
-              "node_modules/@fortawesome/fontawesome-free/js/all.js"
-            ]
+            "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.js"]
           },
           "configurations": {
             "production": {
@@ -107,24 +98,15 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "./src",
-                "./src/styles",
-                "./src/theme"
-              ]
+              "includePaths": ["./src", "./src/styles", "./src/theme"]
             },
-            "scripts": [
-              "node_modules/@fortawesome/fontawesome-free/js/all.js"
-            ]
+            "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.js"]
           }
         }
       }
